k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: heart-api
  namespace: heart-disease

spec:
  replicas: 2

  selector:
    matchLabels:
      app: heart-api

  template:
    metadata:
      labels:
        app: heart-api

    spec:
      containers:

      - name: heart-api

        image: ghcr.io/YOUR_USERNAME/heart-disease-api:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 8000
