k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: heart-api-service
  namespace: heart-disease

spec:
  type: LoadBalancer

  selector:
    app: heart-api

  ports:
    - port: 80
      targetPort: 8000
