k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: heart-api-ingress
  namespace: heart-disease

spec:

  rules:

    - host: heart-api.local

      http:

        paths:

        - path: /

          pathType: Prefix

          backend:

            service:

              name: heart-api-service

              port:

                number: 80
